--- a/.github/workflows/test-and-report.yml
+++ b/.github/workflows/test-and-report.yml
@@ -18,14 +18,22 @@ jobs:
           node-version: '18'
       
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          # We install this utility to convert JSON results to JUnit XML on the fly
+          npm install cucumber-junit --no-save
       
-      - name: Run Cucumber tests with JSON output
-        run: npx cucumber-js --format json:cucumber.json
-        continue-on-error: true
+      - name: Run Cucumber tests and Generate XML
+        id: run-tests
+        # 1. Run cucumber and output JSON (|| true allows script to continue if tests fail)
+        # 2. Pipe the JSON into the converter to create junit.xml
+        run: |
+          npx cucumber-js --format json:cucumber.json || true
+          cat cucumber.json | npx cucumber-junit > junit.xml
       
       - name: Report to Ketryx
         uses: Ketryx/ketryx-github-action@v3
         with:
           api-key: ${{ secrets.KETRYX_API_KEY }}
           project: YOUR_PROJECT_ID  # KXPRJ2Q79QYTAXT8GQRAVV2GNW7RT5W
+          artifact-path: junit.xml
