--- a/.github/workflows/test-and-report.yml
+++ b/.github/workflows/test-and-report.yml
@@ -1,5 +1,6 @@
 name: Run Tests and Report to Ketryx
-
+    with:
+    version: 1.0.0
 on:
   push:
     branches: [ main ]
@@ -14,8 +15,6 @@ jobs:
       
       - name: Set up Node.js
         uses: actions/setup-node@v3
-        with:
-          node-version: '18'
       
       - name: Install dependencies
         run: npm install
