--- a/.github/workflows/test-and-report.yml
+++ b/.github/workflows/test-and-report.yml
@@ -1,17 +1,19 @@
 name: Run Tests and Report to Ketryx
-    with:
-    version: 1.0.0
+    
 on:
   push:
     branches: [ main ]
-
+tags: [ 'v*' ]
+  pull_request:
+    branches: [ main ]
+    
 jobs:
   test:
     runs-on: ubuntu-latest
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
       
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -32,5 +34,3 @@ jobs:
           api-key: ${{ secrets.KETRYX_API_KEY }}
           # The Project ID you provided earlier:
           project: KXPRJ2Q79QYTAXT8GQRAVV2GNW7RT5W
-          # The specific path to the JSON report generated above:
-          test-cucumber-path: cucumber_report.json
