--- a/.github/workflows/test-and-report.yml
+++ b/.github/workflows/test-and-report.yml
@@ -32,5 +32,5 @@ jobs:
         uses: Ketryx/ketryx-github-action@v1
         with:
           api-key: ${{ secrets.KETRYX_API_KEY }}
-          # The Project ID you provided earlier:
           project: KXPRJ2Q79QYTAXT8GQRAVV2GNW7RT5W
+          build-name: KXPRB29N35H00TG8RBTTVSKJ6FXG0WN
