--- a/.github/workflows/test-and-report.yml
+++ b/.github/workflows/test-and-report.yml
@@ -13,10 +13,10 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
       
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
       
       - name: Install dependencies
         run: npm install
@@ -29,8 +29,8 @@ jobs:
         run: npx cucumber-js Test-01.feature --format json:cucumber_report.json || true
       
       - name: Report to Ketryx
-        uses: Ketryx/ketryx-github-action@v1
+        uses: Ketryx/ketryx-github-action@v3
         with:
-          api-key: ${{ secrets.KETRYX_API_KEY }}
-          project: KXPRJ2Q79QYTAXT8GQRAVV2GNW7RT5W
+          api-key: ${{ secrets.API_KEY }}
+          project: ${{ secrets.PROJECT_ID }}
           build-name: KXPRB29N35H00TG8RBTTVSKJ6FXG0WN
