--- a/.github/workflows/test-and-report.yml
+++ b/.github/workflows/test-and-report.yml
@@ -36,3 +36,5 @@ jobs:
           project: ${{ secrets.PROJECT_ID_2 }}
           build-name: "git-testing"
           test-cucumber-path: cucumber_report.json
+          ketryx-url: "https://cs.ketryx.net"
+           if: always()
