--- a/.github/workflows/test-and-report.yml
+++ b/.github/workflows/test-and-report.yml
@@ -1,40 +1,128 @@
-name: Run Tests and Report to Ketryx
-    
+name: CI/CD Build
+
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
-    
+  workflow_dispatch:
+  push:
+    branches:
+      - '**'
+
 jobs:
-  test:
+  test-js:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Node 20
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'  # Specify Node.js version
-      
+          node-version: '20'
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v4
+        with:
+          path: ./js-src/node_modules
+          key: modules-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('package.json', 'package-lock.json') }}
       - name: Install dependencies
-        run: npm install
-      
-      - name: Run Specific Cucumber Test
-        id: run-tests
-        # We target "Test-01.feature" specifically
-        # We format as JSON because Ketryx reads Cucumber JSON natively
-        # "|| true" ensures the step doesn't crash if the test fails, allowing the Report step to run
-        run: npx cucumber-js Test-01.feature --format json:cucumber_report.json || true
-      
-      - name: Report to Ketryx
-        uses: Ketryx/ketryx-github-action@v1.4.0
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: cd js-src && npm install
+      - name: Run unit and integration tests
+        run: cd js-src && npm run test:unit-integration-ci
+      - name: Run end-to-end tests
+        run: cd js-src && npm run test:e2e
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: success() || failure()
         with:
+          name: test-results-js
+          path: js-src/test-results/
+          retention-days: 7
+          if-no-files-found: error
+      - name: Report JS build to Ketryx
+        uses: Ketryx/ketryx-github-action@v1
+        if: success() || failure()
+        with:
+          ketryx-url: ${{ vars.KETRYX_URL }}
+          project: ${{ vars.PROJECT_ID_2 }}
           api-key: ${{ secrets.API_KEY_2 }}
-          project: ${{ secrets.PROJECT_ID_2 }}
-          build-name: "git-testing"
-          test-cucumber-path: cucumber_report.json
-          ketryx-url: "https://cs.ketryx.net"
-           if: always()
+          commit-sha: ${{ github.event.pull_request.head.sha || github.sha }}
+          build-name: ci-js
+          test-junit-path: js-src/test-results/jest-junit.xml
+          test-cucumber-path: js-src/test-results/cucumber-report.json
+
+  test-java:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: temurin
+          architecture: x64
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: '8.6'
+      - name: Run Java unit tests
+        working-directory: java-src
+        run: ./gradlew test
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: success() || failure()
+        with:
+          name: test-results-java
+          path: java-src/build/test-results/test/
+          retention-days: 7
+          if-no-files-found: error
+      - name: Report Java build to Ketryx
+        uses: Ketryx/ketryx-github-action@v1
+        if: success() || failure()
+        with:
+          ketryx-url: ${{ vars.KETRYX_URL }}
+          project: ${{ vars.PROJECT_ID_2 }}
+          api-key: ${{ secrets.API_KEY_2 }}
+          commit-sha: ${{ github.event.pull_request.head.sha || github.sha }}
+          build-name: ci-java
+          test-junit-path: java-src/build/test-results/test/*.xml
+
+  create-sbom:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Generate SBOM
+        uses: anchore/sbom-action@v0
+        with:
+          path: ./go-src/
+          format: spdx-json
+          output-file: sbom.spdx.json
+      - name: Report SPDX SBOM to Ketryx
+        uses: Ketryx/ketryx-github-action@v1
+        if: success() || failure()
+        with:
+          ketryx-url: ${{ vars.KETRYX_URL }}
+          project: ${{ vars.PROJECT_ID_2 }}
+          api-key: ${{ secrets.API_KEY_2 }}
+          commit-sha: ${{ github.event.pull_request.head.sha || github.sha }}
+          build-name: ci-sbom
+          spdx-json-path: |
+                sbom.spdx.json
+
+  check-pr:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Check version status in Ketryx
+        uses: Ketryx/ketryx-github-action@v1
+        if: success() || failure()
+        with:
+          ketryx-url: ${{ vars.KETRYX_URL }}
+          project: ${{ vars.PROJECT_ID_2 }}
+          api-key: ${{ secrets.API_KEY_2 }}
+          commit-sha: ${{ github.event.pull_request.head.sha || github.sha }}
+          build-name: check-pr
+          check-release-status: true
