--- a/.github/workflows/test-and-report.yml
+++ b/.github/workflows/test-and-report.yml
@@ -8,48 +8,6 @@ on:
       - '**'
 
 jobs:
-  test-js:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up Node 20
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v4
-        with:
-          path: ./js-src/node_modules
-          key: modules-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('package.json', 'package-lock.json') }}
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: cd js-src && npm install
-      - name: Run unit and integration tests
-        run: cd js-src && npm run test:unit-integration-ci
-      - name: Run end-to-end tests
-        run: cd js-src && npm run test:e2e
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        if: success() || failure()
-        with:
-          name: test-results-js
-          path: js-src/test-results/
-          retention-days: 7
-          if-no-files-found: error
-      - name: Report JS build to Ketryx
-        uses: Ketryx/ketryx-github-action@v1
-        if: success() || failure()
-        with:
-          ketryx-url: ${{ vars.KETRYX_URL }}
-          project: ${{ vars.PROJECT_ID_2 }}
-          api-key: ${{ secrets.API_KEY_2 }}
-          commit-sha: ${{ github.event.pull_request.head.sha || github.sha }}
-          build-name: ci-js
-          test-junit-path: js-src/test-results/jest-junit.xml
-          test-cucumber-path: js-src/test-results/cucumber-report.json
-
   test-java:
     runs-on: ubuntu-latest
     steps:
@@ -81,48 +39,8 @@ jobs:
         if: success() || failure()
         with:
           ketryx-url: ${{ vars.KETRYX_URL }}
-          project: ${{ vars.PROJECT_ID_2 }}
-          api-key: ${{ secrets.API_KEY_2 }}
+          project: ${{ vars.KETRYX_PROJECT }}
+          api-key: ${{ secrets.KETRYX_API_KEY }}
           commit-sha: ${{ github.event.pull_request.head.sha || github.sha }}
           build-name: ci-java
           test-junit-path: java-src/build/test-results/test/*.xml
-
-  create-sbom:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Generate SBOM
-        uses: anchore/sbom-action@v0
-        with:
-          path: ./go-src/
-          format: spdx-json
-          output-file: sbom.spdx.json
-      - name: Report SPDX SBOM to Ketryx
-        uses: Ketryx/ketryx-github-action@v1
-        if: success() || failure()
-        with:
-          ketryx-url: ${{ vars.KETRYX_URL }}
-          project: ${{ vars.PROJECT_ID_2 }}
-          api-key: ${{ secrets.API_KEY_2 }}
-          commit-sha: ${{ github.event.pull_request.head.sha || github.sha }}
-          build-name: ci-sbom
-          spdx-json-path: |
-                sbom.spdx.json
-
-  check-pr:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Check version status in Ketryx
-        uses: Ketryx/ketryx-github-action@v1
-        if: success() || failure()
-        with:
-          ketryx-url: ${{ vars.KETRYX_URL }}
-          project: ${{ vars.PROJECT_ID_2 }}
-          api-key: ${{ secrets.API_KEY_2 }}
-          commit-sha: ${{ github.event.pull_request.head.sha || github.sha }}
-          build-name: check-pr
-          check-release-status: true
