--- a/.github/workflows/test-and-report.yml
+++ b/.github/workflows/test-and-report.yml
@@ -39,8 +39,8 @@ jobs:
         if: success() || failure()
         with:
           ketryx-url: ${{ vars.KETRYX_URL }}
-          project: ${{ vars.KETRYX_PROJECT }}
-          api-key: ${{ secrets.KETRYX_API_KEY }}
+          project: ${{ vars.PROJECT_ID }}
+          api-key: ${{ secrets.API_KEY }}
           commit-sha: ${{ github.event.pull_request.head.sha || github.sha }}
           build-name: ci-java
           test-junit-path: java-src/build/test-results/test/*.xml
