--- a/.github/workflows/test-and-report.yml
+++ b/.github/workflows/test-and-report.yml
@@ -43,6 +43,7 @@ jobs:
           ketryx-url: ${{ vars.KETRYX_URL }}
           project: ${{ vars.PROJECT_ID }}
           api-key: ${{ secrets.API_KEY_2 }}
+          version: 1.0.0
           commit-sha: ${{ github.event.pull_request.head.sha || github.sha }}
           build-name: ci-java
           test-junit-path: java-src/build/test-results/test/*.xml
